# tc-size-rainfall-figures

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/figure_inputs/: EPQ.csv  EPQ_wide.csv  EPcat.csv  EPcat_wide.csv  NAQ.csv  NAQ_wide.csv  NAcat.csv  NAcat_wide.csv  README.md  fig01_boxplot_stats.csv  fig01_category_counts.csv  fig04_radius_precip_scatter.csv
data/figure_inputs/fig04_scatter/: EP_MAJ_HUR.csv  EP_MIN_HUR.csv  EP_TD.csv  (+5 more)
docs/: data_inventory.md  figure_plan.md  original_code_audit.md  repository_structure.md
figures/: fig01_structure_boxplots.py  fig02_radial_profiles.py  fig03_seasonal_maps.py  fig04_radius_precip_scatter.py  fig05_extreme_radial_quadrants.py  fig06_extreme_distance_histograms.py  fig07_structure_trends.py  fig08_environment_composites_r1_r2.py  fig09_environment_composites_r3_r4.py  fig10_mld_anomalies.py  figure_manifest.json
latex/: README.md
latex/figures/: fig01_structure_boxplots.tex  fig02_radial_profiles.tex  fig04_radius_precip_scatter.tex
notebooks/: 00_environment_check.ipynb
outputs/: README.md
scripts/: check_environment.py  prepare_pgfplots_inputs.py  render_latex_figures.py  run_all_figures.py  validate_repository.py
src/tc_size_rainfall/: __init__.py  config.py  extremes.py  geospatial.py  io.py  plotting.py  precipitation.py  radial.py  stats.py  tracks.py
tests/: test_figure_inputs.py  test_imports.py  test_latex_sources.py  test_pgfplots_inputs.py  test_precipitation_extremes.py  test_repository_structure.py  test_tracks.py
