[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tc-size-rainfall"
version = "0.1.0"
description = "Reproducible code to recreate tropical cyclone size and rainfall figures."
authors = [
    {name = "Adolfo Pérez-Estrada"}
]
requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/apereze/tc-size-rainfall-figures"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
